--- a/.travis.yml
+++ b/.travis.yml
@@ -3,19 +3,19 @@ sevices:
  - docker
 
 before_install:
- - docker build -t stephengrider/react-test -f ./client/Dockerfile.dev ./client
+ - docker build -t xelooo/react-test -f ./client/Dockerfile.dev ./client
 
 script:
- - docker run -e CI=true stephengrider/react-test npm test
+ - docker run -e CI=true xelooo/react-test npm test
 
 after_succes:
- - docker build -t stephengrider/multi-client ./client
- - docker build -t stephengrider/multi-nginx ./nginx
- - docker build -t stephengrider/multi-server ./server
- - docker build -t stephengrider/multi-worker ./worker
+ - docker build -t xelooo/multi-client ./client
+ - docker build -t xelooo/multi-nginx ./nginx
+ - docker build -t xelooo/multi-server ./server
+ - docker build -t xelooo/multi-worker ./worker
 #pushing into docker hub
  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
- - docker push stephengrider/multi-client
- - docker push stephengrider/multi-nginx
- - docker push stephengrider/multi-server
- - docker push stephengrider/multi-worker
+ - docker push xelooo/multi-client
+ - docker push xelooo/multi-nginx
+ - docker push xelooo/multi-server
+ - docker push xelooo/multi-worker
